--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,6 +19,7 @@
     <string name="button9">9</string>
     <string name="button_clear">C</string>
     <string name="button_submit">OK</string>
+    <string name="plus_symbol">+</string>
     <string name="equal_symbol">=</string>
     <string name="question_mark">\?</string>
     <string name="current_score">Score:%d</string>
